--- a/src/component/HeaderGenders/HeaderGenders.style.scss
+++ b/src/component/HeaderGenders/HeaderGenders.style.scss
@@ -9,7 +9,7 @@
 
     .GenderButton {
       &-Button {
-        font-size: 12px;
+        font-size: 11px;
         letter-spacing: 0.5px;
         line-height: 16px;
 
